# bootloader_mips_1892vm10

./: .clang-format  CMakeLists.txt  README.md
bootloader/: project.ld
bootloader/include/: dma.h  emac.h  fimware.h  fw_protocol.h  pll.h  types.h
bootloader/src/: emac.c  firmware.c  fw_protocol.c  pll.c  syscalls.c
bootloader/src/asm/: start_up.asm
src/: main.c
